Opened 9 years ago

Closed 9 years ago

#12478 closed bug (fixed)

app_server crash trying to login to Google with WebPositive

Reported by: jessicah Owned by: jua
Priority: normal Milestone: Unscheduled
Component: Servers/app_server Version: R1/Development
Keywords: Cc: ttcoder
Blocked By: Blocking: #12519
Platform: All

Description

As summary says, app_server crashed :p

Attachments (2)

app_server-664-debug-17-11-2015-21-49-18.report (120.8 KB ) - added by jessicah 9 years ago.
app_server-673-debug-22-11-2015-07-05-52.report (59.5 KB ) - added by humdinger 9 years ago.
debugger report with DEBUG-enabled app_server

Download all attachments as: .zip

Change History (15)

comment:1 by pulkomandy, 9 years ago

Owner: changed from axeld to jua
Status: newassigned

comment:2 by jua, 9 years ago

Is this reproducible?

comment:3 by humdinger, 9 years ago

I have build hrev49863 with a DEBUG app_server. It took quite a while for it to crash while browsing the web aimlessly. I found this in the syslog, not sure if it provides more insights:

KERN: runtime_loader: Cannot open file libc.so.6: No such file or directory
KERN: bfs: bfs_access:1519: Permission denied
KERN: runtime_loader: Cannot open file libc.so.6: No such file or directory
KERN: slab memory manager: created area 0x91001000 (32516)
KERN: runtime_loader: Cannot open file libc.so.6: No such file or directory
KERN: Last message repeated 2 times.
KERN: runtime_loader: Cannot open file libc.so.6: No such file or directory
KERN: vm_soft_fault: va 0x37000 not covered by area in address space
KERN: vm_page_fault: vm_soft_fault returned error 'Bad address' on fault at 0x37120, ip 0x1df0b88, write 0, user 1, thread 0xa39
KERN: vm_page_fault: thread "w:1011:offscreen" (2617) in team "app_server" (673) tried to read address 0x37120, ip 0x1df0b88 ("app_server_seg0ro" +0x198b88)
KERN: debug_server: Thread 2617 entered the debugger: Segment violation
KERN: stack trace, current PC 0x1df0b88  combine_hspan__CQ23agg18clipped_alpha_maskiiPUci + 0x8c:
KERN:   (0x71baad68)  0x1ddb589  finalize__Q23aggt14scanline_u8_am1ZQ23agg18clipped_alpha_maski + 0x81
KERN:   (0x71baadb8)  0x1e1018b  sweep_scanline__H1ZQ23aggt14scanline_u8_am1ZQ23agg18clipped_alpha_mask_Q23aggt31serialized_scanlines_adaptor_aa1ZUcRX00_b + 0x107
KERN:   (0x71baadf8)  0x1e10224  render_scanlines__H3ZQ23aggt31serialized_scanlines_adaptor_aa1ZUcZQ23aggt14scanline_u8_am1ZQ23agg18clipped_alpha_maskZQ23aggt26renderer_scanline_aa_solid1ZQ23aggt15renderer_region1Z11PixelFormat_3aggRX01RX11RX21_v + 0x7c
KERN:   (0x71baae28)  0x1e1224f  ConsumeGlyph__Q215AGGTextRenderer14StringRendererlUlPC10GlyphCacheP14FontCacheEntrydddd + 0x49b
KERN:   (0x71baafa8)  0x1e11810  LayoutGlyphs__H1ZQ215AGGTextRenderer14StringRenderer_17GlyphLayoutEngineRX01RC10ServerFontPCclPC16escapement_deltaUcPC6BPointP18FontCacheReference_b + 0x35c
KERN:   (0x71bab078)  0x1e0f072  RenderString__15AGGTextRendererPCcUlPC6BPointRC5BRectbP6BPointP18FontCacheReference + 0x172
KERN:   (0x71bab178)  0x1dd6c9c  DrawString__7PainterPCcUlPC6BPointP18FontCacheReference + 0xf0
KERN:   (0x71bab208)  0x1dc7911  DrawString__13DrawingEnginePCclPC6BPoint + 0x131
KERN:   (0x71bab298)  0x1d61b06  _DispatchViewDrawingMessage__12ServerWindowlRQ28BPrivate12LinkReceiver + 0x2dd2
KERN:   (0x71baca88)  0x1d5e848  _DispatchViewMessage__12ServerWindowlRQ28BPrivate12LinkReceiver + 0x3714
KERN:   (0x71bacd78)  0x1d5b054  _DispatchMessage__12ServerWindowlRQ28BPrivate12LinkReceiver + 0x1788
KERN:   (0x71bacea8)  0x1d6505a  _MessageLooper__12ServerWindow + 0x30a
KERN:   (0x71bacf48)  0x1d2e831  _message_thread__13MessageLooperPv + 0x35
KERN:   (0x71bacf78)  0x18792b3  thread_entry + 0x23
KERN: intel_extreme: CALLED status_t device_open(const char *, long unsigned int, void **)
KERN: intel_extreme: accelerant: intel_extreme.accelerant
KERN: intel_extreme accelerant:CALLED status_t intel_init_accelerant(int)
KERN: intel_extreme accelerant:head detected: 0
KERN: intel_extreme accelerant:adpa: 00040000, dova: 00000000, dovb: 00000000, lvds: 00000000
KERN: DDC: ddc2_read: DDC information read failure
KERN: Last message repeated 7 times.
KERN: DDC: verify_checksum: DDC information contains zeros only
KERN: ddc2_read: DDC checksum incorrect!
KERN: DDC: verify_checksum: DDC information contains zeros only
KERN: ddc2_read: DDC checksum incorrect!
KERN: DDC: verify_checksum: DDC information contains zeros only
KERN: ddc2_read: DDC checksum incorrect!
KERN: DDC: verify_checksum: DDC information contains zeros only
KERN: ddc2_read: DDC checksum incorrect!
KERN: DDC: ddc2_read: DDC information read failure
KERN: Last message repeated 11 times.
KERN: Test: and [file_exists [/system/bin/FirstBootPrompt], or [not [file_exists [/boot/home/config/settings/Locale settings]], readonly ]] -> 0

comment:4 by jua, 9 years ago

@humdinger, did you save a report when dropped into debugger?

comment:5 by humdinger, 9 years ago

No. How do I do that?

comment:6 by jua, 9 years ago

When app_server crashes, you should get dropped into a debugger, similar to KDL (but full-screen). In there, wait until symbols are loaded, then type save-report and wait a few more seconds before you reboot. Then you should find the report on your desktop.

comment:7 by humdinger, 9 years ago

Took me some time... running on DEBUG seems to help. :)
Attached is the debug-report. I was already logged into my GMail webinterface and started Google+ in another tab. I had to log in there as well (why?), was asked to try out some "new G+ interface" and went for it. Bang!

by humdinger, 9 years ago

debugger report with DEBUG-enabled app_server

comment:8 by diver, 9 years ago

Blocking: 12519 added

(In #12519) Thanks for the debug report, this makes it a dupe of #12478.

comment:9 by pulkomandy, 9 years ago

I often get app_server crashes while viewing pull request diffs on github. Hope this helps to reproduce.

comment:10 by ttcoder, 9 years ago

Reproducible case:

Crashed 100% of my 4 attempts here. Takes just a few seconds of your time to try it out :-)

Can someone Cc me to this ticket ? (for watch-list/dashboard purposes)

EDIT: the same test with QupZilla does not trigger the crash

Last edited 9 years ago by ttcoder (previous) (diff)

comment:11 by luroh, 9 years ago

Cc: ttcoder added

comment:12 by jua, 9 years ago

Thanks everyone for the reports and test case! Fixed in hrev49972.

comment:13 by jua, 9 years ago

Resolution: fixed
Status: assignedclosed
Note: See TracTickets for help on using tickets.