app_server: attach correct rendering buffer to cloned mask

* When cloning a cached mask, we have to attach the
  AGG rendering buffer of the new instance to the AGG clipped
  mask object. Before, it was using the buffer description from
  the clone source.. which can later disappear at any time.

* Fixes bug #12478